# three-line-trader

./: .gitignore  README.md  check_kiwoom.py  config.toml.example  main.py  pyproject.toml  simulate.py
data/: simulator.db  simulator.db-shm  simulator.db-wal
tests/: test_broker.py  test_core.py  test_csv_import.py  test_notifier.py  test_state_machine.py  test_store.py  test_ui_smoke.py  test_watcher.py
trader/: broker.py  core.py  kiwoom.py  notifier.py  state_machine.py  store.py  watcher.py
trader/ui/: app.py  bus.py  events_view.py  positions_view.py  register_dialog.py
